Fix icon and row alignment

--- a/app/assets/stylesheets/admin.scss
+++ b/app/assets/stylesheets/admin.scss
@@ -109,7 +109,7 @@ label {
 
 .config-authentication__item {
   display: flex;
-  gap: var(--su-3);
+  gap: var(--su-2);
   padding-top: var(--su-3);
   padding-bottom: var(--su-3);
 
@@ -117,8 +117,16 @@ label {
     width: 100%;
   }
 
+  &--row {
+    height: 40px;
+  }
+
   &--icon {
+    align-items: center;
     color: var(--base-80);
+    display: flex;
+    height: 40px;
+    width: 40px;
   }
 }
 
